[package]
publish = false
name = "h3-quiche"
version = "0.0.0"
edition = "2021"
description = "h3 over quiche"
authors = ["Julian Eager <eagr@tutanota.com>"]
license = "MIT OR Apache-2.0"
categories = ["network-programming"]
keywords = ["quic", "http3"]
readme = "README.md"
repository = "https://github.com/eagr/h3-quiche"
include = [
    "/src",
    "/*.md",
    "/LICENSE-*",
]

[dependencies]
bytes = "1.3"
h3 = { git = "https://github.com/hyperium/h3" }
quiche = "0.16"
tracing = "0.1"

[dev-dependencies]
http = "0.2"
ring = "0.16"
tokio = { version = "1.22", features = ["full"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "ansi", "env-filter", "time"] }
